[FIX] mail: make messaging menu header visible in Safari
Task-2389455

closes odoo/odoo#62837

--- a/addons/mail/static/src/components/messaging_menu/messaging_menu.scss
+++ b/addons/mail/static/src/components/messaging_menu/messaging_menu.scss
@@ -50,6 +50,7 @@
 
     &:not(.o-mobile) {
         display: flex;
+        flex-shrink: 0; // Forces Safari to not shrink below fit content
     }
 
     &.o-mobile {
